# mcp-course

./: .gitignore  README.md  main.py  pyproject.toml
ai-tool-calling-demo/: main.py  pyproject.toml  weather.py
calculator-server/: calculator.py  pyproject.toml  server.py
company-assistant-server/: main.py  pyproject.toml  server.py
company-assistant-server/prompts/: hr_prompts.py
company-assistant-server/resources/: hr.py
company-assistant-server/tools/: leave_tools.py
doc-server/: docs.py  main.py  pyproject.toml  server.py
documentation-server/: main.py  pyproject.toml  search.py  server.py
documentation-server/docs/: api.md  introduction.md  sqlite.md  transport.md
file-server/: filesystem.py  main.py  pyproject.toml  server.py
file-server/workspace/: new_readme.txt  readme.txt
first-mcp-server/: main.py  pyproject.toml  server.py
inventory-server/: .env.example  README.md  inventory.db  main.py  pyproject.toml  server.py
inventory-server/config/: settings.py
inventory-server/models/: customer.py
inventory-server/repositories/: customer_repository.py
inventory-server/services/: customer_service.py
inventory-server/tests/: test_customer_service.py
inventory-server/utils/: logger.py  validators.py
prompt-server/: main.py  pyproject.toml  server.py
resource-server/: main.py  pyproject.toml  server.py
rest-api-server/: api.py  main.py  pyproject.toml  server.py
sqlite-server/: company.db  database.py  main.py  pyproject.toml  server.py
team-prompt-server/: main.py  prompts.py  pyproject.toml  server.py
