[project]
name = "mcp-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
]

[tool.uv.workspace]
members = [
    "calculator-server",
    "weather-mcp-server",
    "ai-tool-calling-demo",
    "first-mcp-server",
]
